# gtk-widget-demo

./: AGENTS.md  README.md  meson.build
docs/: c-code-standard.md  doc-guide.md
docs/features/: feature-1-base-application.md  feature-2-gobject-introspection.md
docs/notes/: 2026-07-16-plan-gtk-build-systems.md  2026-07-22-coding-gtk-system-includes.md  2026-07-22-plan-gobject-type-exploration.md  2026-07-23-coding-feature-2-gobject-introspection.md
include/: introspection.h  main.h
include/introspection/: inspector-pane.h  property-list.h  signal-list.h  type-ancestry.h
include/introspection/inspector-pane/: display.h  inspector-pane-private.h  pick-mode.h  selection.h
include/main/: sample-palette.h  window-shell.h
src/: main.c
src/introspection/: inspector-pane.c  property-list.c  signal-list.c  type-ancestry.c
src/introspection/inspector-pane/: display.c  pick-mode.c  selection.c
src/main/: sample-palette.c  window-shell.c
test/introspection/: property-list.c  signal-list.c  test-type-ancestry.c  type-ancestry.c
